[package]
name = "apirust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json", "blocking", "gzip", "deflate"] }
tokio = { version = "1.38.0", features = ["full"] }